--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
     <title><%= title %></title>
 
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/cloudinary-video-player@1.11.4/dist/cld-video-player.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -33,6 +34,7 @@
         <%- body %>
     </main>
 
+    <script src="https://unpkg.com/cloudinary-video-player@1.11.4/dist/cld-video-player.min.js"></script>
     <script src="/script.js"></script>
 </body>
 </html>
