--- a/public/style.css
+++ b/public/style.css
@@ -127,6 +127,12 @@ body {
   filter: brightness(65%);
 }
 
+.hero-video iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 .hero-overlay {
   position: relative;
   z-index: 1;
