Genbrugelig funktion til bookingbekræftelser og opdateret bookinglogik
Jeg har tilføjet en genbrugelig sendBookingConfirmationEmail funktion i mail konfigurationen og opdateret alle relevante controllere til at bruge den, så der automatisk sendes en bookingbekræftelse efter en gennemført betaling. Der er også tilføjet en updateBookingStatus metode i bookingModels, og bookingstatus bliver nu sat til confirmed når betalingen lykkes. Derudover viser payment success siden fejlbeskeder hvis systemet ikke kan hente bookingen.

--- a/views/payment-success.ejs
+++ b/views/payment-success.ejs
@@ -8,7 +8,11 @@
         </div>
         
         <div class="payment-info">
-            <p>Tak for din betaling! Din booking er nu bekræftet.</p>
+            <% if (errorMessage) { %>
+                <p><%= errorMessage %></p>
+            <% } else { %>
+                <p>Tak for din betaling! Din booking er nu bekræftet.</p>
+            <% } %>
             <% if (booking) { %>
                 <p>Du modtager en bekræftelse på email: <strong><%= booking.customer_email %></strong></p>
             <% } %>
