--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,16 +16,14 @@
         <a href="/" class="nav-logo">UNDERSTORY</a>
 
         <div class="nav-links">
-            <a href="/product">Produkt</a>
-            <a href="/demo">Se demo</a>
-            <a href="/pricing">Priser</a>
-            <a href="/community">Community</a>
+            <a href="#explore">Oplevelser</a>
+            <a href="#about">Om os</a>
         </div>
     </nav>
 
     <!-- Højre bjælke: Login -->
     <nav class="glass-nav right-nav">
-        <a href="/login" class="login-btn">Login</a>
+        <a href="/affiliate/login" class="login-btn">Partner Login</a>
     </nav>
 </header>
 
